SUBDIRS = @TOOLSDIRS@

EXTRA_DIST = autostuff alliance.m4 motif.m4 oldgcc.m4 xpm.m4 build depcomp \
             COPYING-2.0 COPYING.LIB-2.0 LICENCE \
             README README.macosx \
	     FAQ CHANGES \
             \
             debian/control \
             debian/copyright \
             debian/changelog \
             debian/rules \
             debian/alliance.doc-base \
             debian/alliance.postinst \
             debian/alliance.postrm \
             debian/compat \
             debian/docs
             \
             debian/patches \
             debian/source/format
