dnl
dnl This file is part of the Alliance CAD System
dnl Copyright (C) Laboratoire LIP6 - Département ASIM
dnl Universite Pierre et Marie Curie
dnl 
dnl Home page          : http://www-asim.lip6.fr/alliance/
dnl E-mail support     : mailto:alliance-support@asim.lip6.fr
dnl 
dnl This library is free software; you  can redistribute it and/or modify it
dnl under the terms  of the GNU Library General Public  License as published
dnl by the Free Software Foundation; either version 2 of the License, or (at
dnl your option) any later version.
dnl 
dnl Alliance VLSI  CAD System  is distributed  in the hope  that it  will be
dnl useful, but WITHOUT  ANY WARRANTY; without even the  implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
dnl Public License for more details.
dnl 
dnl You should have received a copy  of the GNU General Public License along
dnl with the GNU C Library; see the  file COPYING. If not, write to the Free
dnl Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl Purpose : Auto stuffing Alliance
dnl           Almost ten years since I wrote this stuff, I just can't
dnl           believe it
dnl Date    : 01/02/2002
dnl Author  : Frederic Petrot <Frederic.Petrot@lip6.fr>
dnl $Id: configure.in,v 1.18 2002/04/18 15:31:29 ludo Exp $
dnl
dnl
AC_INIT(./configure.in)
AM_INIT_AUTOMAKE(alliance, 5.0)
AC_PROG_CC
AC_PROG_RANLIB

changequote(,)dnl
# Build a compilation order that ensures that the libraries are
# compiled and installed prior to the tools
# Add in the following variable the library name (or part of it, as a
# match is performed) that you what to compile prior to anything
libraries="\<mbk aut \<rds elp abl bdd log btr vex ctl abe abt abv fsm fks fvh ftl rtn rtd scl vbh vbl vpn vpd vvh vtl pat ppt phl gcp druc beh bhl bvl"
dirs=`\ls -l $srcdir | grep '^d' | awk '{print $NF}'`
for l in $libraries ; do
   for i in $dirs ; do
      if test -d $srcdir/$i ; then
         if test `expr match $i $l` -ne 0 ; then
            ldirs="$ldirs `basename $i`"
         fi
      fi
   done
done
tdirs=$dirs
for i in $ldirs ; do
   tdirs=`echo $tdirs | sed -e "s/\<$i\>//"`
done
for i in $ldirs $tdirs ; do
   if test -f $srcdir/$i/configure.in ; then
      sdirs="$sdirs `basename $i`"
   fi
done
echo $sdirs
SUBDIRS="$sdirs"
changequote([,])dnl

AC_CONFIG_SUBDIRS($sdirs)
AC_SUBST(SUBDIRS)

AC_OUTPUT([
Makefile
])
