#             ,,,
#            (o o)
####=====oOO--(_)--OOO=========================================####
# 
# Filename: configure.in
# Copyright (C) 1997, 2000 Czo <Olivier.Sirol@lip6.fr>
# License: GPL (http://www.gnu.org/copyleft/gpl.html)
# Started: Feb 1997
# Last Change: Friday 22 September 2000, 16:33
# Edit Time: 1:36:20
# Description: Alliance CAD system configure.in 
#
# $Id: configure.in,v 1.19 2000/09/22 14:41:41 czo Exp $
#

AC_REVISION($Revision: 1.19 $)dnl

AC_INIT(configure.in)

AC_PREFIX_DEFAULT(/usr/local/alliance)

# Helps this script to run in bad configured env...

#PATH=$PATH:/bin:/usr/bin:/usr/local/bin:/labo/TeX/teTeX/bin:/labo/X11R6/bin:/labo/X11r5/bin:/labo/bin:/labo/gnu/bin:/sbin:/user/local/bin:/usr/X11/bin:/usr/X11R6/bin:/usr/andrew/bin:/usr/bin/X11:/usr/bin/games:/usr/bin:/usr/ccs/bin:/usr/dt/bin:/usr/etc:/usr/games:/usr/lib/teTeX/bin:/usr/local/bin:/usr/local/games:/usr/openwin/bin:/usr/sbin:/usr/ucb/bin:/usr/ucb:/usr/xpg4/bin

#LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib:/usr/local/lib:/labo/gnu/lib:/labo/X11R6/lib:/usr/lib/X11:/labo/X11r5/lib:/usr/X11R6.3/lib

    
# Which platform for Alliance CAD
AC_MSG_CHECKING(for platform)

# WARNING : if changing this remember to do it on the 3 config files :
# configure.in alc_env.sh.in and alc_env.csh.in

ALLIANCE_OS=Unknown
 
case `uname` in

  Linux*) case `uname -r` in
           1.*) ALLIANCE_OS=Linux_aout ;;
          2.0*) ALLIANCE_OS=Linux_elf  ;;            
             *) ALLIANCE_OS=Linux  ;;
          esac ;;

  SunOS*) case `uname -r` in
            5*) ALLIANCE_OS=Solaris ;;
             *) ALLIANCE_OS=SunOS ;;
          esac ;;

  FreeBSD*)     ALLIANCE_OS=FreeBSD ;;

  NetBSD*)      ALLIANCE_OS=NetBSD ;;

  HP-UX*)       ALLIANCE_OS=HPUX ;;

  OSF1*)        ALLIANCE_OS=OSF ;;

  CYGWIN*)      ALLIANCE_OS=Cygwin ;;

  *)            ALLIANCE_OS=Unknown ;;

esac

export ALLIANCE_OS
# echo $ALLIANCE_OS

AC_MSG_RESULT(Configuring Alliance VLSI CAD System on platform : $ALLIANCE_OS)
AC_SUBST(ALLIANCE_OS)

AC_PROG_MAKE_SET

if test "$program_suffix" = NONE ; then
  if test "$ALLIANCE_OS" = Cygwin ; then
      PROGRAM_SUFFIX=".exe"
  else    
      PROGRAM_SUFFIX=""
  fi
else    
    PROGRAM_SUFFIX="$program_suffix"
fi

AC_SUBST(PROGRAM_SUFFIX)


################################################################## Binaries
AC_CHECKING(%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Binaries)

# AC_CANONICAL_SYSTEM

# Set default value for CC and CFLAGS
# -DALLIANCE_DISTRIB

if test -z "$CFLAGS" ; then
  CFLAGS="-O -D$ALLIANCE_OS"
fi

AC_PROG_CC

AC_PATH_PROG(FULL_CC,       $CC)
AC_SUBST(FULL_CC)

AC_PROG_CPP

if test "$GCC" = yes ; then
    CFLAGS="-O2 -Wall -D$ALLIANCE_OS"
fi


# Set default value for MAKE
AC_PATH_PROG(GMAKE,      gmake)
AC_PATH_PROG(MAKE,       make)
if test -n "$GMAKE" ; then
    MAKE=$GMAKE
fi

ARFLAGS=
AC_SUBST(MAKEFLAGS)

# Looking for particular programs
# Lex & Yacc
# Do not use AC_PROG_YACC because our yacc grammar
# is not compatible with bison...
# AC_PATH_PROG(YACC, yacc)

AC_PROG_YACC
AC_PROG_LEX
AC_DECL_YYTEXT

YACCFLAGS=`echo $YACC | awk '{for (i=2 ; i<=NF ; i++) printf("%s ", $i);printf ("\n"); }'`
AC_SUBST(YACCFLAGS)

LEXFLAGS=`echo $LEX  | awk '{for (i=2 ; i<=NF ; i++) printf("%s ", $i);printf ("\n"); }'`
AC_SUBST(LEXFLAGS)

AC_PATH_PROG(FULL_LEX,   `echo $LEX | awk '{print $1}'`)
AC_SUBST(FULL_LEX)

AC_PATH_PROG(FULL_YACC,  `echo $YACC | awk '{print $1}'`)
AC_SUBST(FULL_YACC)

# gcc-cpp has the wonderful -MM option to produce nicer dependencies
test "$GCC" = yes && CPP_MM=M; AC_SUBST(CPP_MM)

AC_PROG_LN_S

# Looking for ordinary programs

AC_PATH_PROG(AR,         ar)

ARFLAGS=rv 
AC_SUBST(ARFLAGS)

AC_PATH_PROG(AUTOCONF,   autoconf)
AC_PATH_PROG(AUTOHEADER, autoheader)
AC_PATH_PROG(AUTOMAKE,   automake)

AC_PATH_PROG(GAWK,       gawk)
AC_PATH_PROG(AWK,        awk)
if test -n "$GAWK" ; then
    AWK=$GAWK
fi

AC_PATH_PROG(CHMOD,      chmod)
AC_PATH_PROG(CP,         cp)
AC_PATH_PROG(CAT,        cat)
AC_PATH_PROG(CSH,        csh)
AC_PATH_PROG(CUT,        cut)
AC_PATH_PROG(ECHO,       echo)
AC_PATH_PROG(FALSE,      false)
AC_PATH_PROG(FIND,       find)
AC_PATH_PROG(GREP,       grep)
AC_PATH_PROG(HOSTNAME,   hostname)
AC_PATH_PROG(LD,         ld)
AC_PATH_PROG(LNDIR,      lndir)
AC_PATH_PROG(LS,         ls)
AC_PATH_PROG(MKDIR,      mkdir)
AC_PATH_PROG(MV,         mv)
AC_PATH_PROG(PERL,       perl)
AC_PATH_PROG(PWDBIN,     pwd)
AC_PATH_PROG(RANLIB,     ranlib)
AC_PATH_PROG(RM,         rm)
AC_PATH_PROG(SED,        sed)

AC_PATH_PROG(SH,      sh)
if test "$SH" != sh ; then
    SHELL=$SH
else
    SHELL=/bin/sh
fi
AC_SUBST(SHELL)

AC_PATH_PROG(STRIP,      strip)
AC_PATH_PROG(TEST,       test)
AC_PATH_PROG(TOUCH,      touch)
AC_PATH_PROG(TR,         tr)
AC_PATH_PROG(TRUE,       true)
AC_PATH_PROG(WC,         wc)


# SKIPTEST
# if false; then
    
# Check that all the utilities are present

# All but makeinfo, automake, autoconf, autoheader, zsh
if $TEST -z "$AR" \
   -o -z "$AWK" \
   -o -z "$CAT" \
   -o -z "$CHMOD" \
   -o -z "$CP" \
   -o -z "$CUT" \
   -o -z "$ECHO" \
   -o -z "$FALSE" \
   -o -z "$FIND" \
   -o -z "$GREP" \
   -o -z "$HOSTNAME" \
   -o -z "$LD" \
   -o -z "$LS" \
   -o -z "$MKDIR" \
   -o -z "$MV" \
   -o -z "$PERL" \
   -o -z "$PWDBIN" \
   -o -z "$RM" \
   -o -z "$SED" \
   -o -z "$STRIP" \
   -o -z "$TEST" \
   -o -z "$TOUCH" \
   -o -z "$TR" \
   -o -z "$TRUE" \
   -o -z "$WC" 
then
  AC_MSG_WARN([please install the above utilities that are not present])
fi

if test "$ALLIANCE_OS" = Cygwin ; then
    STRIP="echo"
fi


################################################################## Libraries...
AC_CHECKING(%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  Headers and Libraries...)
# Check that Xpm is installed
# ($TRUE is used to avoid inclusion of -lXpm in LIBS)
#AC_CHECK_LIB(Xpm, XpmReadFileToImage, $TRUE,
#  AC_MSG_ERROR([please install Xpm]))

# Check that xforms is installed
#AC_CHECK_LIB(xforms, fl_init_font, $TRUE,
#  AC_MSG_ERROR([please install xforms]))


if test "$ALLIANCE_OS" = Solaris ; then
    x_includes=/usr/openwin/include
    x_libraries=/usr/openwin/lib
fi

AC_PATH_XTRA

#dnl Check for Motif include files location.
#dnl The LAST one found is used, this makes the highest version to be used,
#dnl e.g. when Motif1.2 and Motif2.0 are both present.

SKIP_MOTIF=
if test -z "$SKIP_MOTIF"; then
  gui_includes="`echo $x_includes|sed 's%/[^/][^/]*$%%'` /local/Motif*/include /local/include/Motif* /usr/local/Motif*/include /usr/local/include/Motif* /usr/include/Motif* /usr/Motif*/include /usr/local/include /usr/local/X11*/include /usr/include /usr/X11*/include /usr/include/X11* /usr/dt/include $MOTIFHOME/include $GUI_INC_LOC"
  AC_MSG_CHECKING(for location of Motif GUI includes)
  GUI_INC_LOC=
  for try in $gui_includes; do
    if test -f "$try/Xm/Xm.h"; then
      GUI_INC_LOC=$try
    fi
  done
  if test -n "$GUI_INC_LOC"; then
    AC_MSG_RESULT($GUI_INC_LOC)
    test "$GUI_INC_LOC" = /usr/include && GUI_INC_LOC=.
  else
    AC_MSG_RESULT(<not found>)
    SKIP_MOTIF=YES
  fi
fi

#dnl Check for Motif library files location.
#dnl The LAST one found is used, this makes the highest version to be used,
#dnl e.g. when Motif1.2 and Motif2.0 are both present.

if test -z "$SKIP_MOTIF"; then
  gui_libs="`echo $x_libraries|sed 's%/[^/][^/]*$%%'` `echo "$GUI_INC_LOC" | sed 's/include/lib/'` /local/Motif*/lib /local/lib/Motif* /usr/local/Motif*/lib /usr/local/lib/Motif* /usr/Motif*/lib /usr/lib/Motif* /usr/local/lib /usr/local/X11*/lib /usr/lib /usr/X11*/lib /usr/lib/X11* /usr/dt/lib $MOTIFHOME/lib $GUI_LIB_LOC"
  AC_MSG_CHECKING(for location of Motif GUI libs)
  GUI_LIB_LOC=
  for try in $gui_libs; do
    if test -f "$try/libXm.a" -o -f "$try/libXm.so" -o -f "$try/libXm.sl"; then
      GUI_LIB_LOC=$try
      if test "`(uname) 2>/dev/null`" = SunOS &&
            uname -r | grep '^5' >/dev/null; then
        GUI_LIB_LOC="$GUI_LIB_LOC -R $try"
      fi
    fi
  done
  if test -n "$GUI_LIB_LOC"; then
    AC_MSG_RESULT($GUI_LIB_LOC)
  else
    AC_MSG_RESULT(<not found>)
    SKIP_MOTIF=YES
  fi
fi

AC_SUBST(GUI_INC_LOC)
AC_SUBST(GUI_LIB_LOC)

# Under Cygwin I had problems with the order of libs...
if test "$ALLIANCE_OS" = Cygwin ; then
    X_PRE_LIBS="-lXt $X_PRE_LIBS"
fi

# Check if a small X app compiles

OLD_LIBS=$LIBS
OLD_CFLAGS=$CFLAGS
LIBS="$OLD_LIBS $X_LIBS $X_EXTRA_LIBS $X_PRE_LIBS -lXt -lX11"
CFLAGS="$OLD_CFLAGS $X_CFLAGS"
AC_MSG_CHECKING(if you can link X11 app)
AC_TRY_LINK([#include <stdio.h>
#include <X11/Xlib.h>],
[ XOpenDisplay (":0");],
AC_MSG_RESULT(yes),
AC_MSG_RESULT(ERROR: BAD X11 environment)
)
LIBS=$OLD_LIBS
CFLAGS=$OLD_CFLAGS
    
# Check if the motif lib needs other libs to link ok

OLD_LIBS=$LIBS
OLD_CFLAGS=$CFLAGS
LIBS="$OLD_LIBS -L$GUI_LIB_LOC -lXm $X_LIBS $X_EXTRA_LIBS $X_PRE_LIBS -lXt -lX11"
CFLAGS="$OLD_CFLAGS $X_CFLAGS -I$GUI_INC_LOC"

AC_CHECKING([if you can link Motif/LessTif app])
AC_MSG_CHECKING([       without additional libs])
AC_TRY_LINK([# include <Xm/Xm.h>
# include <Xm/FileSB.h>
# include <Xm/MessageB.h>
# include <Xm/SelectioB.h>
# include <Xm/SeparatoG.h>],
[ XtAppContext app;
  Widget toplevel;
  XmString xm_string;
  Arg args[1];
  toplevel = XtVaAppInitialize(&app, "Demos", 0, 0, 0, 0, 0, 0);
  xm_string = XmStringCreateSimple("Vive Alliance");
  XtSetArg(args[0], XmNmessageString, xm_string);
  XmStringFree(xm_string);
  XtAppMainLoop( app );],
AC_MSG_RESULT(yes),
AC_MSG_RESULT(no)

# try with Xintl
AC_MSG_CHECKING([       with Xintl])
LIBS="$OLD_LIBS -L$GUI_LIB_LOC -lXm $X_LIBS $X_EXTRA_LIBS $X_PRE_LIBS -lXintl -lXt -lX11"
CFLAGS="$OLD_CFLAGS $X_CFLAGS -I$GUI_INC_LOC"
[
AC_TRY_LINK([# include <Xm/Xm.h>
# include <Xm/FileSB.h>
# include <Xm/MessageB.h>
# include <Xm/SelectioB.h>
# include <Xm/SeparatoG.h>],
[ XtAppContext app;
  Widget toplevel;
  XmString xm_string;
  Arg args[1];
  toplevel = XtVaAppInitialize(&app, "Demos", 0, 0, 0, 0, 0, 0);
  xm_string = XmStringCreateSimple("Vive Alliance");
  XtSetArg(args[0], XmNmessageString, xm_string);
  XmStringFree(xm_string);
  XtAppMainLoop( app );],
AC_MSG_RESULT(yes); X_PRE_LIBS="$X_PRE_LIBS -lXintl",
AC_MSG_RESULT(no)

# try with Xp
AC_MSG_CHECKING([       with Xext and Xp])
LIBS="$OLD_LIBS -L$GUI_LIB_LOC -lXm $X_LIBS $X_EXTRA_LIBS $X_PRE_LIBS -lXext -lXp -lXt -lX11"
CFLAGS="$OLD_CFLAGS $X_CFLAGS -I$GUI_INC_LOC"
[
AC_TRY_LINK([# include <Xm/Xm.h>
# include <Xm/FileSB.h>
# include <Xm/MessageB.h>
# include <Xm/SelectioB.h>
# include <Xm/SeparatoG.h>],
[ XtAppContext app;
  Widget toplevel;
  XmString xm_string;
  Arg args[1];
  toplevel = XtVaAppInitialize(&app, "Demos", 0, 0, 0, 0, 0, 0);
  xm_string = XmStringCreateSimple("Vive Alliance");
  XtSetArg(args[0], XmNmessageString, xm_string);
  XmStringFree(xm_string);
  XtAppMainLoop( app );],
AC_MSG_RESULT(yes); X_PRE_LIBS="$X_PRE_LIBS -lXext -lXp",
AC_MSG_RESULT(ERROR: BAD Motif/LessTif environment)
)])])

LIBS=$OLD_LIBS
CFLAGS=$OLD_CFLAGS


dnl ##### Check for libXpm.


dnl from AfterStep-APPS-990329/ascdc-0.3/autoconf/aclocal.m4
dnl test to find the hard-to-find libXpm
dnl mostly copied from AC_PATH_X & AC_PATH_DIRECT, but explictly set

AC_DEFUN(VT_FIND_LIBXPM,
[
AC_REQUIRE_CPP()

# Initialize some more variables set by options.
# The variables have the same names as the options, with
# dashes changed to underlines.

# If we find XPM, set shell vars xpm_includes and xpm_libraries to the
# paths, otherwise set no_xpm=yes.
# Uses ac_ vars as temps to allow command line to override cache and checks.
AC_MSG_CHECKING(for libXpm)

AC_ARG_WITH(xpm_includes,
  [  --with-xpm-includes=DIR use XPM includes in DIR],
  xpm_includes="$withval", xpm_includes=NO)
AC_ARG_WITH(xpm_library,
  [  --with-xpm-library=DIR  use XPM library in DIR],
  xpm_libraries="$withval", xpm_libraries=NO)

# --without-xpm overrides everything else, but does not touch the cache.
AC_ARG_WITH(xpm,
  [  --with-xpm              use XPM])
if test "$with_xpm" = no; then
  have_xpm=disabled
else
  AC_CACHE_VAL(ac_cv_have_xpm, [
  vt_xpm_include_X11=no
  if test -n "$xpm_includes"; then
    vt_xpm_includes=$xpm_includes
  else
    vt_xpm_includes=NO
  fi
  if test -n "$xpm_libraries"; then
    vt_xpm_libraries=$xpm_libraries
  else
    vt_xpm_libraries=NO
  fi

  VT_XPM_DIRECT

  if test "$vt_xpm_includes" = NO -o "$vt_xpm_libraries" = NO; then
    ac_cv_have_xpm="have_xpm=no"
  else
    ac_cv_have_xpm="have_xpm=yes \
        vt_xpm_includes=$vt_xpm_includes vt_xpm_libraries=$vt_xpm_libraries \
	vt_xpm_include_X11=$vt_xpm_include_X11"
  fi])dnl
  eval "$ac_cv_have_xpm"
fi

if test "$have_xpm" != yes; then
  AC_MSG_RESULT($have_xpm)
  no_xpm=yes
else
  if test "$xpm_includes" != NO; then
    if test "$xpm_includes" != "$vt_xpm_includes"; then
      vt_xpm_include_X11=no
      if test -z "$xpm_includes"; then
	AC_TRY_CPP([#include <X11/xpm.h>],
	vt_xpm_include_X11=yes)
      else
        if test -r "$xpm_includes/X11/xpm.h"; then
	  vt_xpm_include_X11=yes
        fi
      fi
    fi
    vt_xpm_includes=$xpm_includes
  fi
  if test "x$xpm_libraries" != xNO; then
    vt_xpm_libraries=$xpm_libraries
  fi
  # Update the cache value to reflect the command line values.
  ac_cv_have_xpm="have_xpm=yes \
	vt_xpm_includes=$vt_xpm_includes vt_xpm_libraries=$vt_xpm_libraries \
	vt_xpm_include_X11=$vt_xpm_include_X11"
  eval "$ac_cv_have_xpm"
  AC_MSG_RESULT([-I$vt_xpm_includes -L$vt_xpm_libraries])
  if test -n "$vt_xpm_includes"; then
    HAVEXPM="NOXPM"
  else
    HAVEXPM="XPM"
  fi
  if test -n "$vt_xpm_includes"; then
    XPM_CFLAGS="-I$vt_xpm_includes"
  fi
  XPM_LIBS="-lXpm"
  if test -n "$vt_xpm_libraries"; then
    XPM_LIBS="-L$vt_xpm_libraries $XPM_LIBS"
  fi
fi

])

dnl Internal subroutine of VT_FIND_LIBXPM
dnl Set vt_xpm_include and vt_xpm_libr
# -------------- find xpm.h and Xpm.a/Xpm.so/Xpm.sl
AC_DEFUN(VT_XPM_DIRECT,
[if test "$vt_xpm_includes" = NO; then
  # Guess where to find xpm.h

  # First, try using that file with no special directory specified.
AC_TRY_CPP([#include <X11/xpm.h>],
[# We can compile using X headers with no special include directory.
vt_xpm_includes=
vt_xpm_include_X11=yes],
[# Look for the header file in a standard set of common directories.
  for ac_dir in               \
    /usr/X11/include          \
    /usr/X11R6/include        \
    /usr/X11R5/include        \
    /usr/X11R4/include        \
                              \
    /usr/include/X11          \
    /usr/include/X11R6        \
    /usr/include/X11R5        \
    /usr/include/X11R4        \
                              \
    /usr/local/X11/include    \
    /usr/local/X11R6/include  \
    /usr/local/X11R5/include  \
    /usr/local/X11R4/include  \
                              \
    /usr/local/include/X11    \
    /usr/local/include/X11R6  \
    /usr/local/include/X11R5  \
    /usr/local/include/X11R4  \
                              \
    /usr/X386/include         \
    /usr/x386/include         \
    /usr/XFree86/include/X11  \
                              \
    /usr/include              \
    /usr/local/include        \
    /usr/unsupported/include  \
    /usr/athena/include       \
    /usr/local/x11r5/include  \
    /usr/lpp/Xamples/include  \
                              \
    /usr/openwin/include      \
    /usr/openwin/share/include \
    ; \
  do
    if test -r "$ac_dir/X11/xpm.h"; then
      vt_xpm_includes="$ac_dir"
      vt_xpm_include_X11=yes
      break
# Albert@dma.be: does not make sense because we #include <X11/xpm.h>
#    else
#      if test -r "$ac_dir/xpm.h"; then
#        vt_xpm_includes=$ac_dir
#        break
#      fi
    fi
  done])
fi

if test "$vt_xpm_libraries" = NO; then
  # Check for the libraries.

  # See if we find them without any special options.
  # Don't add to $LIBS permanently.
  ac_save_LIBS="$LIBS"
  LIBS="-lXpm $LIBS"
AC_TRY_LINK(, [XpmReadFileToPixmap()],
[LIBS="$ac_save_LIBS"
# We can link libXpm with no special library path.
vt_xpm_libraries=],
[LIBS="$ac_save_LIBS"
# First see if replacing the include by lib works.
for ac_dir in \
    `echo "$vt_xpm_includes" | sed 's,include/X11,lib,;s,include,lib,'` \
    /usr/X11/lib          \
    /usr/X11R6/lib        \
    /usr/X11R5/lib        \
    /usr/X11R4/lib        \
                          \
    /usr/lib/X11          \
    /usr/lib/X11R6        \
    /usr/lib/X11R5        \
    /usr/lib/X11R4        \
                          \
    /usr/local/X11/lib    \
    /usr/local/X11R6/lib  \
    /usr/local/X11R5/lib  \
    /usr/local/X11R4/lib  \
                          \
    /usr/local/lib/X11    \
    /usr/local/lib/X11R6  \
    /usr/local/lib/X11R5  \
    /usr/local/lib/X11R4  \
                          \
    /usr/X386/lib         \
    /usr/x386/lib         \
    /usr/XFree86/lib/X11  \
                          \
    /usr/lib              \
    /usr/local/lib        \
    /usr/unsupported/lib  \
    /usr/athena/lib       \
    /usr/local/x11r5/lib  \
    /usr/lpp/Xamples/lib  \
                          \
    /usr/openwin/lib      \
    /usr/openwin/share/lib \
    ; \
do
dnl XXX Shouldn't this really use AC_TRY_LINK to be portable & robust??
  for ac_extension in a so sl; do
    if test -r $ac_dir/libXpm.$ac_extension; then
      vt_xpm_libraries=$ac_dir
      break 2
    fi
  done
done])
fi
])

VT_FIND_LIBXPM
AUTO_HAS="$AUTO_HAS -DAUTO_HAS_XPM"

XPM_CFLAGS_LOC="$XPM_CFLAGS"
XPM_LIBS_LOC="$XPM_LIBS"

AC_SUBST(XPM_LIBS_LOC)
AC_SUBST(XPM_CFLAGS_LOC)

CZO="king"
AC_SUBST(CZO)

# Check where usefull GNU libs are installed (readline)
#AC_CHECK_LIB(readline, main, $TRUE,
#AC_MSG_WARN(Cannot find readline library), -ltermcap )


# Check for readline include

SKIP_GNU=
if test -z "$SKIP_GNU"; then
  gnu_includes="`echo $LD_LIBRARY_PATH | sed 's/:/ /g' | sed 's/lib/include/g'` /usr/local/include /usr/include $GNUHOME/include $GNU_INC_LOC"
  AC_MSG_CHECKING(for location of GNU readline include)
  GNU_INC_LOC=
#    echo $gnu_includes
  for try in $gnu_includes; do
    if test -f "$try/readline/readline.h"; then
      GNU_INC_LOC=$try
    fi
  done
  if test -n "$GNU_INC_LOC"; then
    AC_MSG_RESULT($GNU_INC_LOC)
    test "$GNU_INC_LOC" = /usr/include && GNU_INC_LOC=.
  else
    AC_MSG_RESULT(not found.)
    SKIP_GNU=YES
  fi
fi

# Check for readline library

if test -z "$SKIP_GNU"; then
  gnu_libs="`echo $LD_LIBRARY_PATH | sed 's/:/ /g'` `echo "$GNU_INC_LOC" | sed 's/include/lib/'` /usr/local/lib /usr/lib $GNUHOME/lib $GNU_LIB_LOC"
  AC_MSG_CHECKING(for location of GNU libs)
  GNU_LIB_LOC=
#    echo $gnu_libs
  for try in $gnu_libs; do
    if test -f "$try/libreadline.a" ; then
      GNU_LIB_LOC=$try
    fi
  done
  if test -n "$GNU_LIB_LOC"; then
    AC_MSG_RESULT($GNU_LIB_LOC)
  else
    AC_MSG_RESULT(not found. Please install readline and add lib to your LD_LIBRARY_PATH )
    SKIP_GNU=YES
  fi
fi

AC_SUBST(GNU_INC_LOC)
AC_SUBST(GNU_LIB_LOC)


################################################################### Headers...
AC_STDC_HEADERS

#AC_CHECK_SIZEOF(int)

#AC_CHECK_SIZEOF(void *)

#AC_MSG_RESULT([kernel name : "$KERNEL_FILE"])

################################################################### OS specific...

AC_MSG_CHECKING(SA_RESTART)
AC_TRY_LINK([#include <stdio.h>
#include <stdlib.h>
#include <signal.h>],
[struct sigaction sgct;
sgct.sa_flags    = SA_RESTART;
sigaction( SIGCHLD, &sgct , NULL );],
AC_MSG_RESULT(yes); AUTO_HAS="$AUTO_HAS -DAUTO_HAS_SA_RESTART",
AC_MSG_RESULT(no))

AC_MSG_CHECKING(DRAND48)
AC_TRY_LINK([#include <stdio.h>
#include <stdlib.h>],
[  double     Proba;
   Proba    = drand48();],
AC_MSG_RESULT(yes); AUTO_HAS="$AUTO_HAS -DAUTO_HAS_DRAND48",
AC_MSG_RESULT(no))

AC_MSG_CHECKING(VALUES_H)
AC_TRY_LINK([#include <stdio.h>
#include <stdlib.h>
#include <values.h>],
[  float     Proba;
   Proba   = MAXFLOAT;],
AC_MSG_RESULT(yes); AUTO_HAS="$AUTO_HAS -DAUTO_HAS_VALUES_H",
AC_MSG_RESULT(no))

AC_SUBST(AUTO_HAS)

#fi # SKIPTEST
    
################################################################### Alliance ALLIANCE_TOP
AC_MSG_CHECKING(where the Alliance package was installed)
# Avoid problems with soft links and builtin pwd...
ALLIANCE_TOP=`$PWDBIN | sed 's§share/etc$§archi§'`
ALLIANCE_TOP=`echo $ALLIANCE_TOP | sed 's§archi/Cygwin/etc$§archi§'`

export ALLIANCE_TOP
AC_MSG_RESULT("")
AC_SUBST(ALLIANCE_TOP)

DATE=`date`
AC_SUBST(DATE)

HOST=`uname -a`
AC_SUBST(HOST)

# create output files

AC_OUTPUT(alliance_os.mk alc_env.sh alc_env.csh alc_env.bat)

mv alliance_os.mk $ALLIANCE_OS.mk

# remove  config cache
rm -f config.cache

#cat config.status | grep '^s%' | sed -e 's/^s%@//' -e 's/@%/ /' -e 's/%g$//' | sort | gawk '{printf("%-30s",$1) ; for (i=2 ; i<=NF ; i++) printf("%s ", $i); printf ("\n");}'

cat << EOF
Done...
Alliance is installed on $ALLIANCE_TOP/$ALLIANCE_OS
OS definitions are in $ALLIANCE_OS.mk
You'll need to 'source alc_env.csh'
or '. alc_env.sh' whether you use csh or sh"
EOF

# end of configure
